objects/vlocity_cmt__VPLAbstractionLayerSetup__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__VPLActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLComment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLFlow__c</fullName>
        <label>Flow</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLIntegrationKey__c</fullName>
        <label>IntegrationKey</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLParentEntityContext__c</fullName>
        <label>Parent Entity Context</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                    <default>true</default>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>RootChild</fullName>
                </value>
                <value>
                    <fullName>Root</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLParentEntity__c</fullName>
        <label>Parent Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLTargetDataType__c</fullName>
        <description>Field Data Type - use for technically Update Field</description>
        <label>TargetDataType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>PickList</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLTargetEntityContext__c</fullName>
        <label>Target Entity Context</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                    <default>true</default>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>RootChild</fullName>
                </value>
                <value>
                    <fullName>Root</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLTargetEntity__c</fullName>
        <label>Target Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLTargetGroup__c</fullName>
        <description>TargetGroup - new  - Created by @Alain Kameni - April 06th 2020</description>
        <label>Target Group</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLTargetType__c</fullName>
        <label>Target Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attribute</fullName>
                    <default>true</default>
                    <label>Attribute</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VPLTarget__c</fullName>
        <label>Target</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>VPLAbstractionLayerSetup</label>
    <pluralLabel>VPLAbstractionLayerSetups</pluralLabel>
</CustomObject>